deployment/gcp/k8s/operator-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operator-ui
  template:
    metadata:
      labels:
        app: operator-ui
    spec:
      containers:
        - name: operator-ui
          image: gcr.io/<PROJECT_ID>/operator-ui:latest
          ports:
            - containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: operator-ui-service
spec:
  selector:
    app: operator-ui
  ports:
    - port: 4180
      targetPort: 4180
  type: ClusterIP
