deployment/gcp/k8s/ts-endpoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentinvest-ts-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agentinvest-ts-endpoint
  template:
    metadata:
      labels:
        app: agentinvest-ts-endpoint
    spec:
      containers:
        - name: ts-endpoint
          image: gcr.io/<PROJECT_ID>/agentinvest-ts-endpoint:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: agentinvest-ts-endpoint-service
spec:
  selector:
    app: agentinvest-ts-endpoint
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
